--- a/youtube-css/header.css
+++ b/youtube-css/header.css
@@ -12,6 +12,7 @@
     border-bottom: 1px solid rgb(203, 203, 203);
     border-top:1px solid rgb(203, 203, 203) ;
     z-index: 100;
+    margin-bottom: 20px;
 }
 .left-section{
     width: 150px;
