--- a/youtube-css/video.css
+++ b/youtube-css/video.css
@@ -9,8 +9,11 @@ p{
     z-index: 0;
     margin-left: 5px;
     overflow: hidden;   
+    padding:20px 20px ;
+    background-color: rgb(254, 248, 248) ;
+   
 }
-@media (max-width: 815px){
+@media  (max-width:815px){
     .container {
          grid-template-columns: 1fr 1fr;
 
@@ -22,11 +25,12 @@ p{
 
     }
 }
-@media (min-width:817px) and (max-width:1149){
+@media (min-width:816px) and (max-width:1151){
     .container{
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
+
 .thumbnail-time-container{
     position: relative;
 }
