--- a/youtube-css/video.css
+++ b/youtube-css/video.css
@@ -19,13 +19,13 @@ p{
 
     }
 }
-@media (min-width: 1150px){
+@media (min-width: 1000px){
     .container {
          grid-template-columns: 1fr 1fr 1fr 1fr;
 
     }
 }
-@media (min-width:816px) and (max-width:1151){
+@media (min-width:816px) and (max-width:999px){
     .container{
         grid-template-columns: 1fr 1fr 1fr;
     }
