--- a/youtube-css/video.css
+++ b/youtube-css/video.css
@@ -13,7 +13,7 @@ p{
     background-color: rgb(254, 248, 248) ;
    
 }
-/*@media  (max-width:815px){
+@media  (max-width:815px){
     .container {
          grid-template-columns: 1fr 1fr;
 
@@ -29,7 +29,7 @@ p{
     .container{
         grid-template-columns: 1fr 1fr 1fr;
     }
-}*/
+}
 
 .thumbnail-time-container{
     position: relative;
