--- a/youtube-css/general.css
+++ b/youtube-css/general.css
@@ -3,6 +3,7 @@ body{
     padding-top: 75px;
     padding-right: 20px;
     background-color: rgb(254, 248, 248) ;
+    height:3000px
 }
 p,div{
     font-family: roboto,arial;
